# gray-matter-rs

./: Cargo.toml  LICENSE  README.md  changelog.md
.github/workflows/: ci.yml  main.yml  publish.yml
benches/: parsing_benchmark.rs
src/: engine.rs  entity.rs  lib.rs  matter.rs  tests.rs  value.rs
src/engine/: json.rs  mod.rs  toml.rs  yaml.rs
src/tests/: matter_read.rs  matter_test.rs
src/tests/fixtures/: complex.md
src/value/: deserializer.rs  error.rs  mod.rs  number.rs  pod.rs
src/value/util/: grisu2.rs  print_dec.rs
tests/: matter_read.rs
tests/fixtures/: all.yaml
