[package]
name = "gray_matter"
version = "0.2.1"
authors = ["yuchanns <airamusume@gmail.com>", "Knut Magnus Aasrud <km@aasrud.com>"]
edition = "2018"
license = "MIT"
description = "Smart front matter parser. An implementation of gray-matter in rust. Parses YAML, JSON, TOML and support for custom parsers."
homepage = "https://github.com/the-alchemists-of-arland/gray-matter-rs"
repository = "https://github.com/the-alchemists-of-arland/gray-matter-rs"
readme = "README.md"
keywords = ["markdown", "parse", "front-matter", "gray-matter", "front-matter-parsers"]
exclude = [
    ".github/*"
]

[dependencies]
json = "0.12.4"
regex = "1.4.3"
toml = "0.5.8"
yaml-rust = "0.4.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.61"

[dev-dependencies]
cargo-husky = { version = "1", features = ["precommit-hook", "run-cargo-test", "run-cargo-clippy", "run-cargo-fmt"] }
