[package]
name = "gray_matter"
version = "0.2.9"
authors = ["Hanchin Hsieh <me@yuchanns.xyz>", "Knut Magnus Aasrud <km@aasrud.com>"]
edition = "2018"
license = "MIT"
description = "Smart front matter parser. An implementation of gray-matter in rust. Parses YAML, JSON, TOML and support for custom parsers."
homepage = "https://github.com/the-alchemists-of-arland/gray-matter-rs"
repository = "https://github.com/the-alchemists-of-arland/gray-matter-rs"
readme = "README.md"
keywords = ["markdown", "parse", "front-matter", "gray-matter", "front-matter-parsers"]
exclude = [
    ".github/*"
]

[dependencies]
serde = { version = "1.0.137", features = ["derive"] }
json = { package = "serde_json", version = "1.0.81" }
toml = { version = "0.5.9", optional = true }
yaml = { package = "yaml-rust2", version = "0.8.0", optional = true }

[features]
default = ["toml", "yaml"]

[dev-dependencies]
cargo-husky = { version = "1", features = ["precommit-hook", "run-cargo-test", "run-cargo-clippy", "run-cargo-fmt"] }
