[package]
name = "gray_matter"
version = "0.3.0"
authors = ["Hanchin Hsieh <me@yuchanns.xyz>", "Knut Magnus Aasrud <km@aasrud.com>"]
edition = "2018"
license = "MIT"
description = "Smart front matter parser. An implementation of gray-matter in rust. Parses YAML, JSON, TOML and support for custom parsers."
homepage = "https://github.com/the-alchemists-of-arland/gray-matter-rs"
repository = "https://github.com/the-alchemists-of-arland/gray-matter-rs"
readme = "README.md"
keywords = ["markdown", "parse", "front-matter", "gray-matter", "front-matter-parsers"]
exclude = [
    ".github/*"
]

[dependencies]
serde = { version = "1", features = ["derive"] }
json = { package = "serde_json", version = "1", optional = true }
toml = { version = "0.9", optional = true }
yaml = { package = "yaml-rust2", version = "0.10", optional = true }
thiserror = "2"

[features]
default = ["yaml"]
json = ["dep:json"]
toml = ["dep:toml"]
yaml = ["dep:yaml"]

[dev-dependencies]
cargo-husky = { version = "1", features = ["precommit-hook", "run-cargo-test", "run-cargo-clippy", "run-cargo-fmt"] }
criterion = { version = "0.5", features = ["html_reports"] }
gray_matter_old = { package = "gray_matter", version = "0.2"}

[[bench]]
name = "parsing_benchmark"
harness = false

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
